--- a/style.css
+++ b/style.css
@@ -2,3 +2,32 @@ body{
     background-color: black;
     color:white;
 }
+
+form{
+    margin-top:10px;
+    display:flex;
+    flex-direction:column;
+    border:1px solid gray;
+    width:320px;
+}
+
+form input{
+    width:300px;
+    padding:10px;
+    margin:10px;
+    display:block;
+}
+
+form button{
+    width:300px;
+    padding:10px;
+    margin:10px;
+    font-size:20px;
+    outline:none;
+    border:none;
+}
+
+form button:hover{
+    background-color:green;
+    color:white;
+}
